language/move-lang/tests/move_check/liveness/loop_weirdness.exp
error: 

   ┌── tests/move_check/liveness/loop_weirdness.move:9:43 ───
   │
 9 │                 if (my_local >= 0) { break; };
   │                                           ^ Invalid trailing ';'
   ·
 9 │                 if (my_local >= 0) { break; };
   │                                      ----- Any code after this expression will not be reached
   ·
 9 │                 if (my_local >= 0) { break; };
   │                                           - A trailing ';' in an expression block implicitly adds a '()' value after the semicolon. That '()' value will not be reachable
   │

